test/scc_test/decl/semantic-errors/043.a
043.t:1:12: error: 'inline' specifier allowed on function declarations only